# Rust_ML_Algos

./: Cargo.toml  build.rs  custom_svm_vs_sklearn.py  readme.md  test_knn.py  test_logistic.py  test_svm.py
.cargo/: config.toml
src/: dual_svm.rs  flat_dataset.rs  flat_kernel_cache.rs  flat_svm.rs  knn.rs  lib.rs  logistic_regression.rs  svm.rs  svm_kernel.rs  svm_pegaso.rs  svm_py_wrapper.rs  working_set.rs
src/svm/: dual_svm.rs  flat_kernel_cache.rs  mod.rs  svm.rs  svm_py_wrapper.rs  working_set.rs
