[package]
name = "my_rust_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
numpy = "0.21.0"
rayon = "1.5"
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-parallel = "0.9.1"
faer = { version = "0.18", features = ["std"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
